Check if input is empty

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-8">
-            <input id="txtTarefa"type="text" id="novaTarefa">
+            <input id="txtTarefa" class="rounded-pill w-100 p-2 border-0" type="text">
           </div>
           <div class="col-md-4 text-center">
             <img src="img/add.png" class="icon" id="add">
