--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <main class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>A fazer</h2>
+          <h2>To Do</h2>
         </div>
       </div>
       <div id="board" class="row">
         <div class="tarefa">
-          <div class="col-md-8">Tarefa Teste</div>
+          <div class="col-md-8">Test task</div>
           <div class="col-md-2">
             <img class="icon check" src="img/check.png">
           </div>
